--- a/rxfirebase/build.gradle
+++ b/rxfirebase/build.gradle
@@ -48,7 +48,14 @@ tasks.withType(Test) {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.firebase:firebase-client-android:2.5.0+'
+
+  compile 'com.google.firebase:firebase-storage:9.0.2'
+  compile 'com.google.firebase:firebase-common:9.0.2'
+  compile 'com.google.firebase:firebase-auth:9.0.2'
+  compile 'com.google.firebase:firebase-database:9.0.2'
+  compile 'com.google.android.gms:play-services-auth:9.0.2'
+  compile 'com.google.android.gms:play-services-location:9.0.2'
+
   compile 'io.reactivex:rxjava:1.1.0'
 
   testCompile 'junit:junit:4.12'
